added PORT to mongodb

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_STRING = mongodb+srv://dummydata:zVyiwHRLT1GGaOcg@cluster0.cczgx.mongodb.net/?retryWrites=true&w=majority
+DB_STRING = mongodb+srv://dummydata:sXFUOi0YbQazE745@cluster0.cczgx.mongodb.net/?retryWrites=true&w=majority
