--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DB_STRING = mongodb+srv://dummydata:sXFUOi0YbQazE745@cluster0.cczgx.mongodb.net/?retryWrites=true&w=majority
+DB_STRING = mongodb+srv://dummydata:jMIpqKza13Ardvrt@cluster0.cczgx.mongodb.net/?retryWrites=true&w=majority
+
